<resources>
    <string name="app_name">eDonec</string>
    <string name="RegisterNow"><u>Dont have an account?</u></string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="adresse_email">Adresse Email</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="s_inscrire">S\'INSCRIRE</string>
    <string name="alors_vous_tes_un_parent_ou_un_enseignant">Alors, vous êtes un Parent ou un Enseignant?</string>
    <string name="Sex">Sex</string>
    <string name="Nom">Nom</string>
    <string name="pr_nom">Prénom</string>
    <string name="continuer">CONTINUER</string>
    <string name="ann_e">Année</string>
    <string name="date_de_naissance">Date de naissance</string>
    <string name="etat_civile">Etat Civile</string>
    <string name="adresse">Adresse</string>
    <string name="nombre_d_enfants">Nombre d\'enfants</string>

    <string name="testText">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

</resources>
