<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundcut"
    tools:context="com.example.macbook.splash.Registration.SecondScreenSignUpActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Rv1"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="118dp"
                android:src="@drawable/logo"
                android:id="@+id/imageView"
                />
        </LinearLayout>
        <TextView
            android:layout_marginTop="33dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/nomEtPrenom"
            android:layout_width="220dp"
            android:layout_height="45dp"
            android:textSize="18sp"
            android:text="Quel est votre Nom et Prénom?"/>

        <TextView
            android:id="@+id/tvSex"
            android:layout_height="wrap_content"
            android:text="@string/Sex"
            android:textColor="@color/violet4"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"
            android:textSize="12sp"
            android:layout_width="223dp"

            />

        <Spinner
            android:id="@+id/sexSpinner"
            android:layout_width="244dp"
            android:layout_height="35dp"
            android:layout_gravity="center_horizontal"
            android:spinnerMode="dropdown"
            android:textSize="16sp" />

        <TextView
            android:layout_width="223dp"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@color/violet4"
            android:layout_gravity="center_horizontal"
            android:alpha="0.5"
            />

        <TextView
            android:id="@+id/tvNom"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/Nom"
            android:layout_gravity="center_horizontal"
            android:textSize="12sp"
            android:layout_width="223dp"
            android:textColor="@color/violet4"
            />

        <EditText
            android:id="@+id/etNom"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:background="@android:color/transparent"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:layout_width="221dp"
            />

        <TextView
            android:layout_width="223dp"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@color/violet4"
            android:layout_gravity="center_horizontal"
            android:alpha="0.5"
            />

        <TextView
            android:id="@+id/tvPrenom"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/pr_nom"
            android:layout_gravity="center_horizontal"
            android:textSize="12sp"
            android:layout_width="223dp"
            android:textColor="@color/violet4"
            />

        <EditText
            android:id="@+id/etPrenom"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:background="@android:color/transparent"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:layout_width="221dp"
            />

        <TextView
            android:layout_width="223dp"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@color/violet4"
            android:layout_gravity="center_horizontal"
            android:alpha="0.5"
            />

        <Button
            android:id="@+id/btnContinuer3rdScreen"
            android:layout_width="132dp"
            android:layout_height="37dp"
            android:background="@color/violet4"
            android:onClick="FourthScreenSignUp"
            android:text="@string/continuer"
            android:textColor="@android:color/background_light"
            android:textSize="14dp"
            android:textStyle="bold"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="27dp"
            android:layout_gravity="right"/>




    </LinearLayout>


</RelativeLayout>
